--- a/estilo.css
+++ b/estilo.css
@@ -36,8 +36,8 @@ color: blue;
 }*/
 
 .card{
-	
-	max-width: 200rem;
+	font-size: 25px;
+	max-width: 50rem;
 	border-radius: 20px;
 	box-shadow: 0 0 3rem 1rem rgba(0,0,0,0.2);
 	text-align: center;
@@ -47,6 +47,10 @@ color: blue;
 	max-width: 1280px;
 	padding-top: 12px;
 	padding-bottom: 15px;
+}
+
+#item{
+	size: 20px;
 }
 
 
