--- a/estilo.css
+++ b/estilo.css
@@ -53,6 +53,10 @@ color: blue;
 	size: 20px;
 }
 
+#item2{
+	size: 20px;
+}
+
 
 .container {
     max-width: 400px;
@@ -100,7 +104,7 @@ color: blue;
 }
 
 .Built {
-    font-size: 0.5rem;
+    font-size: 1rem;
     font-family: verdana, Helvetica, sans-serif;
     color: #CCD6F6;
     text-align: center;
