--- a/estilo.css
+++ b/estilo.css
@@ -67,7 +67,7 @@ color: blue;
 #display {
     text-align: right;
     height: 70px;
-    line-height: 80px;
+    line-height: 20px;
     padding: 13px 6px;
     font-size: 40px;
 }
@@ -90,6 +90,7 @@ color: blue;
     text-align: center;
     font-size: 25px;
     cursor: pointer;
+    padding-bottom: 20px;
 }
 
 #equal {
